# OpenPeru

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.test  ImportPDF.py  List variables and functions.xlsx  README.md  hello.py  pyproject.toml
.github/workflows/: ci-unit-test.yml  lint.yml
api/: main.py  test_bills.py  test_bills_detail.py  test_congresistas.py  test_congresistas_detail.py  test_events.py
api/tests/: test_bills.py  test_bills_detail.py  test_congresistas.py  test_congresistas_detail.py  test_events.py
data/: congresistas.csv  congresistas.json  create_fake_data.py  example_vote_event.json  vote_pdfs.csv
data/bill_jsons/: 2021_10300.json  2021_10301.json  2021_10302.json  2021_10303.json  2021_10304.json  2021_10305.json  2021_10306.json  2021_10307.json  2021_10308.json  2021_10309.json  2021_10310.json  2021_10311.json  2021_10312.json  2021_10313.json  2021_10314.json  2021_10315.json  2021_10316.json  2021_10317.json  2021_10318.json  2021_10319.json  2021_10320.json  2021_10321.json  2021_10322.json
draft_notebooks/: descargaActas.ipynb  read_votes.ipynb  test_viz.ipynb
estecon/: __init__.py  config.py  data_model.py  scrape_congresistas.py  scrape_project_bills.py  scrape_utils.py  scrappers.py
estecon/backend/: __init__.py  config.py  tracker.md
estecon/db/: models.py
estecon/schema/: schema.py
estecon/scrapers/: extract_votes.py  schema.py  scrape_congresistas.py  scrape_project_bills.py  scrape_utils.py
estecon/tests/: sample_bill_data.json  test_models.py  (+4 more)
frontend/: package-lock.json  package.json
(+22 files in other folders)
