[project]
name = "estecon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cssselect>=1.3.0",
    "httpx>=0.28.1",
    "ipython>=9.0.2",
    "lxml>=5.3.1",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "typing>=3.10.0.0",
]
