[project]
name = "estecon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "cssselect>=1.3.0",
    "cv>=1.0.0",
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "jellyfish>=1.2.0",
    "lxml>=5.3.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "polars>=1.30.0",
    "pymupdf>=1.25.5",
    "pytesseract>=0.3.13",
    "selenium>=4.33.0",
    "typing>=3.10.0.0",
]
